Nov 8, 2006

* CLEANUP: Some gcc warnings

Sep 15, 2006

* FIXED: Properly get user and password from config file (pass NULL instead
  of "").
* FIXED: Enhance error reporting.

Aug 15, 2006

* ADDED: Bug#193: Checking result-codes in disconnect.

Jul 25, 2006

* Fixed odbc_current_connection(-,-).  Nicos Angelo

Feb 15, 2006

* Bug#140: Fix setting LIBS in configure.  Sandro Hawke.

Nov 14, 2005

* PORT: make configure check for the types SQLLEN and SQLULEN.  Anjo
  Anjewierden.

Oct 12, 2005

* PORT: Stricter typing, look for Mac native iodbc library.

Sep 27, 2003

* FIXED: odbc_free_statement/1 for statements that use SQLPutData() to
  provide long parameters.

* ENHANCED: cleanup of context lifetime management (could lead do freeing
  a context twice on some errors).

Jun 6, 2003

* ADDED: option wide_column_threashold, predicate odbc_debug/1 and some
  additional tests around SQLGetData().  Used to work around an SQL Server
  bug.

May 28, 2003

* FIXED: Pass long parameters using SQLPutData().  Fabien Toscado.

May 3, 2003

* PORT: clean compilation on GCC 3.3

Mar 14, 2003

* FIXED: Explicitely include libraries.

Mar 6, 2003

* ADDED: odbc_fetch/3 and odbc_close_statement/1.

Mar 4, 2003

* FIXED: Properly close statement when using the findall option.

Nov 27, 2002

* FIXED: if odbc_connect/3 has the silent(true) option, don't print
  informational message from the connect (Mike Elston).

Nov 4, 2002

* FIXED: Fetching VARCHAR/VARBINARY columns with value NULL and column-width
  > 1024.  Mike Elston.

Oct 24, 2002

* FIXED: Work around SQL Server bug reporting the number of columns in
  SQLColumns() as 19 rather than 12.  Steve Moyle.

Oct 23, 2002

* FIXED: Work around Postgress driver bug not support GetData properly.
  Steve Moyle.

Sep 30, 2002

* FIXED: stripped the left 24 characters of LONGVAR* types.  Thomas Moraitis.

Sep 27, 2002

* FIXED: fetch LONGVAR* types properly in drivers that do not produce